# Task-Manager

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  alembic.ini  app_main.py  main.py  pyproject.toml  pytest.ini  start.sh
app/api/dependencies/: __init__.py  db.py  token.py  users.py
app/api/filters/: __init__.py  tasks.py  users.py
app/api/routes/: __init__.py  auth.py  categories.py  tasks.py  users.py
app/common/: __init__.py  aggregate.py  decorators.py  exceptions.py  token.py
app/config/: __init__.py  celery.py
app/config/settings/: __init__.py  app.py  app_settings.py  base.py  db_settings.py  redis.py  server.py
app/db/: __init__.py  constants.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_create_users_table.py  002_create_tasks_table.py  003_add_user_id_in_task.py  004_add_active_in_task.py  005_alter_active_in_task.py  (+4 more)
app/db/models/: __init__.py  base.py  category.py  task.py  task_category.py  user.py
app/db/repositories/: base.py  categories.py  tasks.py  tasks_categories.py  users.py
app/shemas/: __init__.py  categories.py  tasks.py  token.py  users.py
app/shemas/validators/: datetime_format.py
app/tests/: conftest.py
app/tests/fixtures/: categories.py  tasks.py  tasks_categories.py  users.py
app/tests/tests_routes/: test_categories.py  test_tasks.py  tests_auth.py  tests_users.py
app/tests/tests_worker/: tests_tasks.py
app/worker/: __init__.py  task.py
nginx/: Dockerfile  (+4 more)
(+12 files in other folders)
